...
) : ViewModel() {
  // Create a hardcoded test recipe, to allow all of our current tests to pass (end to end etc..)
  // This will be cleaned up in next task, with the entire Recipes model refactor
  private val testRecipe =
      Recipe(
          uid = "Test UID",
          name = "Paella",
          ingredients =
              listOf(
                  Ingredient("Rice", Quantity(100.0, FoodUnit.GRAM)),
                  Ingredient("Chicken", Quantity(500.0, FoodUnit.GRAM))),
          instructions =
              listOf(
...
