...
  val drawerState = _drawerState.asStateFlow()

  /** Map of available filters. */
  private val FILTERS =
      mapOf(
          "Basic" to RecipeType.BASIC,
          "High protein" to RecipeType.HIGH_PROTEIN,
          "Low calories" to RecipeType.LOW_CALORIE,
          "Personal" to RecipeType.PERSONAL)

  /** List of filter keys. */
  var filters = FILTERS.keys.toList()

...
